Spelling error fixed

--- a/index.Rmd
+++ b/index.Rmd
@@ -11,5 +11,6 @@ output:
 ## Assignments
 
 [Assignment 1](Assignment_1.html) 
+[Assignment 2](Assignment_2.html)
 
 [Website Link](https://amazon.com)
