completed assignmetn 3, added link

--- a/Assignment_3.Rmd
+++ b/Assignment_3.Rmd
@@ -5,26 +5,52 @@ date: "2023-01-12"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+
+#### Question 1  
+```{r}
+x <- 1.1
+a <- 2.2
+b <- 3.3
+z <- x^(a^b)
+print(z)
+z <- ((x^a)^b)
+print(z)
+z <- 3*(x^3)+2*(x^2)+1
+print(z)
+```
+#### Question 2  
+(1,2,3,4,5,6,7,8,7,6,5,4,3,2,1)
+(1,2,2,3,3,3,4,4,4,4,5,5,5,5,5)
+(5,4,4,3,3,3,2,2,2,2,1,1,1,1,1)
+
+```{r}
+z <- c(seq(1, 8), seq(7, 1))
+print(z)
+
+
+z <- rep(x=1:5, c(1,2,3,4,5))
+  print(z)
+
+z <- rep(x=5:1, c(1,2,3,4,5))
+  print(z)
+  
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+##### Question 3
+```{r}
+queue <- c("sheep", "fox", "owl", "ant")
+print(queue)
+queue[5] <- "serpent"
+print(queue)
+queue <- queue[!queue %in% c("sheep")]
+print(queue)
+queue <- c("donkey", queue[1:4])
+print(queue)
+queue <- queue[!queue %in% c("serpent")]
+print(queue)
+queue <- append(queue, "aphid", after = 3)
+print(queue)
+print(which(queue == "aphid"))
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
