Added the first draft of the first weekly assignment

--- a/index.Rmd
+++ b/index.Rmd
@@ -14,4 +14,7 @@ output:
 [Assignment 2](Assignment_2.html)   
 [Assignment 3](Assignment_3.html)   
 
+## Weekly Assignments
+[Week 2](WeeklyAssignment_1.html)
+
 
