--- a/WeeklyAssignment_1.Rmd
+++ b/WeeklyAssignment_1.Rmd
@@ -13,14 +13,21 @@ First you'll need to download git to your computer. I have a windows computer an
 
 Second, you'll need to generate a personal access token to link git and R. Once in the settings of your GitHub account, scroll to the bottom on the left and go the 'developer settings' tab. Generate a new 'classic' token and click on the first 'repo' box. Copy the code.
 
-You'll have to install a 'credentials' package in R to link them. You can do this using the code line install.packages("credentials") in the console. 
+You'll have to install a 'credentials' package in R to link them. You can do this using the code line ```install.packages("credentials")``` in the console. 
 
-**
+You can use the following code to link R and Git.  
+```git config --global user.email "put github email here"```    
+
+```git config --global user.name "put your name here"```  
+
+```credentials::set_github_pat("put PAT here")```
 
 Once R and git are linked, then you can start to actually build a web page. You'll need to create and r markdown file named 'index' that will serve as the pages main hub. The default output should be HTML.
 
-You'll need to then 'push' the change through into git. To do this, go into the terminal and add the changes. You should use the command 'git add -A' to add all the changes to the commit. Use 'git commit -am "message"' to commit the changes and briefly explain what changes were made. The final command is 'git push'.
+Once you've created something you're happy with, click 'knit' to view it as an HTML. This will update the HTML file, which is necessary for creating the actual webpage.
 
-'git status' will tell you where the files and changes are.
+You'll need to then 'push' the change through into git. To do this, go into the terminal and add the changes. You should use the command ```git add -A``` to add all the changes to the commit. Use ```git commit -am "message"``` to commit the changes and briefly explain what changes were made. The final command is ```git push```.
 
-Finally, you'll want to go into the settings of your repository to upload the web page. Under "Code and automation," there's a section called 'Pages.' In that section, change the Branch from 'none' to 'main.'
+```git status``` will tell you where the files and changes are.
+
+Finally, you'll want to go into the settings of your repository to upload the web page. Under "Code and automation," there's a section called 'Pages.' In that section, change the Branch from 'none' to 'main.' After a few moments, your web page should be up and ready to go!
