Completed weekly assignment 6

--- a/index.Rmd
+++ b/index.Rmd
@@ -21,10 +21,11 @@ Steil ('24) is an undergraduate at Middlebury College, majoring in conservation 
 [Assignment 1](Assignment_1.html)   
 [Assignment 2](Assignment_2.html)   
 [Assignment 3](Assignment_3.html)   
-[Assignment 4 & 5](Assignment_4_and_5.html)
+[Assignment 4 & 5](Assignment_4_and_5.html)   
+[Assignment 6](Assignment_6.html)   
 
 ## Weekly Assignments
 [Week 2](WeeklyAssignment_1.html)   
-[Week 3](WeeklyAssignment_2.html)
+[Week 3](WeeklyAssignment_2.html)   
 
 
