corrected weekly assignment 3 link

--- a/index.Rmd
+++ b/index.Rmd
@@ -31,7 +31,7 @@ Steil ('24) is an undergraduate at Middlebury College, majoring in conservation 
 [Week 2](WeeklyAssignment_1.html)   
 [Week 3](WeeklyAssignment_2.html)   
 [Week 4](Weekly_Assignment_3.html)  
-[Week 5](Weekly_Assignmnet_4.html)   
+[Week 5](Weekly_Assignment_4.html)   
 
 ## Final Project
 [Learning Purrr](FinalProject.html)  
